--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
 "ALIVE_LOGO" :{
     "description" : "alive logo",
     "required" : true,
-  "value" : "https://img.phonandroid.com/2019/05/whatsapp-publicit%C3%A9s-2020.jpg"
+  "value" : "https://telegra.ph/file/bfdac6adc5d38837f5a2a.jpg"
 },
 "FOOTER" :{
     "description" : "Footer Name",
